<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="email">Email address</string>
    <string name="email_warning_message">Please enter a valid email address</string>
    <string name="password">Password</string>
    <string name="password_warning_message">Your password must be at least 6 characters</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tell">Share your best experience..</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?"&#x20;"</string>
    <string name="already_have_an_account">Already have an account?"&#x20;"</string>
    <string name="image_story_description">Image Story Description</string>
    <string name="something_is_wrong">Something is wrong</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="user_not_found">User not found</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="common">Common</string>
    <string name="change_language">Change Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_success">Sign out success</string>
    <string name="dicoding_logo">Dicoding Logo</string>
    <string name="upload_on">Uploaded on %s</string>
    <string name="add_story">Add Story</string>
    <string name="select_image_from">Select image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="failure">failure</string>
    <string name="warning_message_new_story">All fields are required. Please check again.</string>
    <string name="hi">Hi,"&#x20;"</string>
    <string name="good_day">Good Day!</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="default_image">Default Image</string>
    <string name="create_account">Create Account,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
</resources>